--- a/source/shapkssadd.css
+++ b/source/shapkssadd.css
@@ -2,18 +2,128 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: #f5f3f3;
 }
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 10px;
+    
 }
-
-#header-section {
-    padding: 40px 0  107px;
+.logo {
+    width: 48px;
+    left: 100px;
+    top: 32px;
+    margin-right: 233px;
 }
 .header-logo {
-    display: inline-block;
+    display:flex;
     padding: 30px;
+    align-items: center;
+}
+.border {
+    border-radius: 8px;
+    text-align: center;
+    width: 359px;
+    height: 48px;
+    top: 37px;
+    left: 561px;
+    margin-right: 160px;
+    background: #f5f3f3;
+}
+.logo {
+    margin-right: 233px;
+    text-align;
+}
+.eng {
+    margin-right: 43px;
+}
+.alarm {
+    margin-right: 125px;
+}
+.name {
+    margin-right: 8px;
+}
+.picture {
+    position: absolute;
+    width: 120px;
+    height: 141px;
+    left: 83px;
+    top: 16px;
+    border-radius: 32px;
+}
+.frame {
+    position: absolute;
+    width: 286px;
+    height: 651px;
+    left: 100px;
+    top: 108px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+}
+.line {
+    margin-top: 2px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.family {
+    margin-top: 190px;
+    margin-left: 110px;
+}
+.symbol {    
+    position: relative;
+    bottom: 21px;
+    margin-left: 20px;
+    width: 21px;         
+}
+
+
+
+ul {
+    margin:3px;
+    margin-left: 22px;
+}
+
+.information {
+    box-sizing: border-box;
+    position: absolute;
+    width: 922px;
+    height: 270px;
+    left: 418px;
+    top: 108px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.07);
+    border-radius: 32px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+
+}
+
+.content {  
+    /* position:absolute;   */
+    width: 163px;
+    height: 50px;    
+    
+    margin-left: 32px;
+    text-align:justify;
+    
+}
+
+.status {
+    position:relative;    
+    margin-left: 190px;
+    margin-bottom: 50px;
+    width: 85px;
+    bottom: 209px;
+    border-bottom: 50px;
+    
+    
+
+}
+
+.transition {
+    position:fixed
+    width: 235px;
+    height: 50px;
+    margin-top: -250px;
 }
